--- a/src/app/protected/cranix/rooms/rooms.page.html
+++ b/src/app/protected/cranix/rooms/rooms.page.html
@@ -15,63 +15,63 @@
       </mat-cell>
     </ng-container>
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.id}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.id}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.name}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.name}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="places">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'places' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.places}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'places' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.places}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="rows">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'rows' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.rows}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'rows' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.rows}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'description' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.description}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'description' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.description}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="netMask">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'netMask' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.netMask}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'netMask' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.netMask}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="users">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'users' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.users}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'users' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.users}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="startIP">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'startIP' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.startIP}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'startIP' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.startIP}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="roomType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'roomType' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.roomType}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'roomType' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.roomType}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="roomControl">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'roomControl' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.roomControl}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'roomControl' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.roomControl}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="network">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'network' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.network}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'network' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.network}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="hwconfId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'hwconfId' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.hwconfId}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'hwconfId' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.hwconfId}} </mat-cell>
     </ng-container>
 
    <ng-container matColumnDef="actions">
