--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -22,7 +22,8 @@
       <ion-item *ngSwitchCase="'string'">
         <ion-label position="stacked">{{ key | translate }}</ion-label>
         <ng-template [ngIf]="objectService.selects[key]"  [ngIfElse]="elseBlock">
-          <ion-select type="text" formControlName="{{key}}" value="{{object[key]}}">
+          <!-- ion-select type="text" formControlName="{{key}}" value="{{object[key]}}" [compareWith]="compareFn" -->
+            <ion-select type="text" formControlName="{{key}}"  [compareWith]="compareFn">
             <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">{{option | translate}}</ion-select-option>
           </ion-select>
         </ng-template>
