--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content scroll-x="true" scroll-y="true">
   <ion-searchbar (keyup)="doFilter($event.target.value)"></ion-searchbar>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+  <mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="select">
       <mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
@@ -16,83 +16,83 @@
     </ng-container>
 
     <!-- ng-container *ngFor="let key of objectKeys" [ngSwitch]="typeOf(key)"  matColumnDef="{{ key }}">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ key | translate }}</th>
-        <td ngSwitchCase="'string'" mat-cell *matCellDef="let object"> object[key]</td>
-        <td ngSwitchCase="'date'" mat-cell *matCellDef="let object">{{ object[key]  | date:'yyyy-MM-dd'}}</td>
+        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ key | translate }}</mat-header-cell>
+        <ngSwitchCase="'string'" mat-cell *matCellDef="let object"> object[key]</mat-cell>
+        <ngSwitchCase="'date'" mat-cell *matCellDef="let object">{{ object[key]  | date:'yyyy-MM-dd'}}</mat-cell>
     </ng-container -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.id}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.id}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="uuid">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uuid' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.uuid}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uuid' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.uuid}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="address1">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'address1' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.address1}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'address1' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.address1}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="address2">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'address2' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.address2}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'address2' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.address2}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'category' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.category}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'category' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.category}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="locality">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'locality' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.locality}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'locality' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.locality}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="contact">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'contact' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.contact}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'contact' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.contact}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="country">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'country' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.country}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'country' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.country}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'description' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.description}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'description' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.description}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.name}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.name}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name2">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name2' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.name2}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name2' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.name2}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="postalCode">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'postalCode' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.postalCode}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'postalCode' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.postalCode}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="recDate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'recDate' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.recDate  | date:'yyyy-MM-dd'  }} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'recDate' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.recDate  | date:'yyyy-MM-dd'  }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="state">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'state' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.state}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'state' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.state}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="telephone">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'telephone' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.telephone}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'telephone' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.telephone}} </mat-cell>
     </ng-container>
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
@@ -115,9 +115,9 @@
         </ion-button>
       </mat-cell>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></tr>
-  </table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></mat-row>
+  </mat-table>
 
   <!-- mat-paginator [pageSizeOptions]="[1, 2, 5]" showFirstLastButtons></mat-paginator -->
 
