--- a/src/app/protected/cranix/hwconfs/hwconfs.page.html
+++ b/src/app/protected/cranix/hwconfs/hwconfs.page.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content scroll-x="true" scroll-y="true">
   <ion-searchbar (keyup)="doFilter($event.target.value)" ></ion-searchbar>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+  <mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="select">
       <mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
@@ -15,28 +15,28 @@
       </mat-cell>
     </ng-container>
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.id}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.id}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.name}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.name}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="deviceType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'deviceType' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.deviceType}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'deviceType' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.deviceType}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'description' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.description}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'description' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.description}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="partitions">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'partitions' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.partitions}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'partitions' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.partitions}} </mat-cell>
     </ng-container>
 
    <ng-container matColumnDef="actions">
@@ -61,9 +61,9 @@
         </mat-cell>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></tr>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></mat-header-row>
 
-  </table>
+  </mat-table>
   <!-- mat-paginator [pageSizeOptions]="[20,30,50]" showFirstLastButtons></mat-paginator -->
 </ion-content>
