--- a/src/app/protected/cranix/users/users.page.html
+++ b/src/app/protected/cranix/users/users.page.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content scroll-x="true" scroll-y="true">
   <ion-searchbar (keyup)="doFilter($event.target.value)"></ion-searchbar>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+  <mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="select">
       <mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
@@ -16,73 +16,73 @@
     </ng-container>
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.id}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'id' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.id}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="surName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'surName' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.surName}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'surName' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.surName}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="givenName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'givenName' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.givenName}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'givenName' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.givenName}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="birthDay">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'birthDay' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.birthDay | date:'yyyy-MM-dd'  }} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'birthDay' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.birthDay | date:'yyyy-MM-dd'  }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="password">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'password' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.password}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'password' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.password}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="uuid">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uuid' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.uuid}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uuid' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.uuid}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="uid">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uid' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.uid}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uid' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.uid}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'role' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.role}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'role' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.role}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="classes">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'classes' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.classes}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'classes' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.classes}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="msQuota">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'msQuota' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.msQuota}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'msQuota' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.msQuota}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="fsQuota">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'fsQuota' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.fsQuota}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'fsQuota' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.fsQuota}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="msQuotaUsed">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'msQuotaUsed' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.msQuotaUsed}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'msQuotaUsed' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.msQuotaUsed}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="fsQuotaUsed">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'fsQuotaUsed' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.fsQuotaUsed}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'fsQuotaUsed' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.fsQuotaUsed}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="mailAliases">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'mailAliases' | translate }}</th>
-      <td mat-cell *matCellDef="let object"> {{object.mailAliases}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'mailAliases' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let object"> {{object.mailAliases}} </mat-cell>
     </ng-container>
 
 
@@ -110,10 +110,10 @@
         </ion-button>
       </mat-cell>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></tr>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></mat-row>
 
-  </table>
+  </mat-table>
 
   <!-- mat-paginator [pageSizeOptions]="[1, 2, 5]" showFirstLastButtons></mat-paginator -->
 
