--- a/src/app/protected/cephalix/institutes/institutes.page.html
+++ b/src/app/protected/cephalix/institutes/institutes.page.html
@@ -1,9 +1,33 @@
 <cranix-toolbar></cranix-toolbar>
+<ion-row class="header-row">
+</ion-row>
 <ion-content scroll-x="true" scroll-y="true">
   <ion-card>
+    <ion-card-header>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="3">
+            <ion-searchbar (keyup)="doFilter($event.target.value)"></ion-searchbar>
+        </ion-col>
+        <ion-col size="7">
+
+        </ion-col>
+        <ion-col size="2">
+          <ion-button size="small" (click)="redirectToEdit($event,null)">
+          <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+        </ion-button>
+        <ion-button size="small" (click)="openActions($event)">
+          <ion-icon slot="icon-only" name="menu"></ion-icon>
+        </ion-button>
+        <ion-button size="small" (click)="openCollums($event)">
+          <ion-icon slot="icon-only" name="apps"></ion-icon>
+        </ion-button>
+        </ion-col>
+      </ion-row>
+        
+         
+    </ion-card-header>
   <ion-card-content>
-  <ion-searchbar (keyup)="doFilter($event.target.value)"></ion-searchbar>
-  <mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+  <mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="select">
       <mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
@@ -159,7 +183,7 @@
 
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
-        <ion-button size="small" (click)="redirectToEdit($event,null)">
+        <!--ion-button size="small" (click)="redirectToEdit($event,null)">
           <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
         </ion-button>
         <ion-button size="small" (click)="openActions($event)">
@@ -167,7 +191,7 @@
         </ion-button>
         <ion-button size="small" (click)="openCollums($event)">
           <ion-icon slot="icon-only" name="apps"></ion-icon>
-        </ion-button>
+        </ion-button-->
       </mat-header-cell>
       <mat-cell *matCellDef="let object" (click)="$event.stopPropagation()">
         <ion-button fill="clear" size="small" (click)="redirectToEdit($event,object)">
@@ -178,10 +202,10 @@
         </ion-button>
       </mat-cell>
     </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></mat-row>
+    <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns" (click)="selection.toggle(row)"></mat-row>
 
-  </table>
+  </mat-table>
       </ion-card-content>
     </ion-card>
 
