--- a/src/app/protected/cephalix/institutes/institutes.page.scss
+++ b/src/app/protected/cephalix/institutes/institutes.page.scss
@@ -1,42 +1,31 @@
 ion-card {
-    //flex-grow: 1;
-    height: 96%;
-    display: flex;
+  //flex-grow: 1;
+  height: 93%;
+  display: flex;
   flex-direction: column;
-    //#display: flex;
-  //flex-direction: column;
-  //justify-content: center;
-  }
-mat-table {
-    width: 100%;
-  
- }
-/*  ion-card-content{
-      overflow: auto;
- //   overflow: hidden;
-  // 
-   overflow-y: scroll;
-  //  ::-webkit-scrollbar {
-//    display: none;
-  //  }
+  //#display: flex;
+//flex-direction: column;
+//justify-content: center;
 
-
-  }*/
-table {
-    width: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
-    min-width: 500px;
 }
+
+ion-card-content{
+  position: relative;
+  overflow: auto;
+}
+
+mat-table { 
+  width: 100%;
+  min-width: 700px !important;
+  padding-right: 10px;
+}
+
+mat-header-cell {
+  text-align: left;
+  max-width: 300px;
+  padding: 10px;
+}
+mat-cell{
  
-th.mat-header-cell {
-    text-align: left;
-    max-width: 300px;
 }
-.mat-row:nth-child(even){
-    background-color: LightGray;
-    }
 
-.mat-row:nth-child(odd){
-    background-color:silver;
-    }
