--- a/src/app/protected/protected.page.html
+++ b/src/app/protected/protected.page.html
@@ -1,7 +1,16 @@
-<ion-menu start=side contentId="main-content" type=overlay>
+<ion-menu start=side contentId="main-content" type=overlay >
   <ion-content>
     <ion-list id="menu">
-      <ion-list-header>Menu</ion-list-header>
+      <ion-list-header>
+        <ion-item lines="none">
+          <ion-thumbnail>
+            <img src="assets/images/logo/cranix_school.svg">
+          </ion-thumbnail>
+          <ion-label>
+            <h3>CRANIX</h3>
+          </ion-label>
+        </ion-item>
+      </ion-list-header>
       <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
         <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false">
           <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
