--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -23,12 +23,12 @@
         <ion-label position="stacked">{{ key | translate }}</ion-label>
         <ng-template [ngIf]="objectService.selects[key]"  [ngIfElse]="elseBlock">
           <!-- ion-select type="text" formControlName="{{key}}" value="{{object[key]}}" [compareWith]="compareFn" -->
-            <ion-select type="text" formControlName="{{key}}"  [compareWith]="compareFn">
+            <ion-select type="text" formControlName="{{key}}"  [compareWith]="compareFn" [required]="required[key]">
             <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">{{option | translate}}</ion-select-option>
           </ion-select>
         </ng-template>
         <ng-template #elseBlock>
-          <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}"></ion-input>
+          <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}" [required]="required[key]"></ion-input>
         </ng-template>
       </ion-item>
       <ion-item *ngSwitchCase="'stringRO'">
@@ -45,6 +45,9 @@
         <ion-datetime formControlName="{{key}}" cancel-text="{{ 'cancel' | translate }}"
           done-text="{{'apply' | translate }}" max="2100" value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
         </ion-datetime>
+      </ion-item>
+      <ion-item *ngIf="editForm.controls[key].hasError('required') && editForm.controls[key].touched">
+        <p>{{ 'This field is required!' | translate }}</p>
       </ion-item>
     </ion-list>
     <div class="ion-padding">
