--- a/src/app/protected/cephalix/institutes/institutes.page.html
+++ b/src/app/protected/cephalix/institutes/institutes.page.html
@@ -208,6 +208,6 @@
       </ion-card-content>
     </ion-card>
 
-  <!-- mat-paginator [pageSizeOptions]="[1, 2, 5]" showFirstLastButtons></mat-paginator -->
+  <mat-paginator [pageSizeOptions]="[20,50,100]" showFirstLastButtons></mat-paginator>
 
 </ion-content>
